--- a/level11to15.html
+++ b/level11to15.html
@@ -45,7 +45,7 @@
         </div>
         <div id="comeBack">
             <a href="arcade.html">
-                <img src="/Arcade/levels/Level11To15/back.png" alt="Back" width="50px">
+                <img src="back.png" alt="Back" width="50px">
             </a>
         </div>
     </div>
