--- a/level1to5.html
+++ b/level1to5.html
@@ -4,13 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solo</title>
+    <title>You vs Computer</title>
     <link rel="stylesheet" href="l1style.css">
 </head>
 
 <body>
     <div id="bodyDiv">
-        <h1 class="h1">You VS Computer</h1>
+        <h1 class="h1">
+            <div id="h1">
+                You VS Computer
+            </div>
+        </h1>
         <div id="mainBox">
             <div id="moveCounter">
                 <div id="text">You Have : </div>
@@ -45,7 +49,7 @@
         </div>
         <div id="comeBack">
             <a href="arcade.html">
-                <img src="back.png" alt="Back" width="50px">
+                <img src="back.png" alt="Back" id="comeBack">
             </a>
         </div>
     </div>
