--- a/multiplayer.html
+++ b/multiplayer.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solo</title>
+    <title>Multi player</title>
     <link rel="stylesheet" href="multiStyle.css">
 </head>
 
